--- a/index.html
+++ b/index.html
@@ -22,12 +22,26 @@
         </nav>
     </header>
     <section>
-        <aside id="aside1">Aside 1</aside>
-        <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ipsam molestias et dolorum, neque hic quisquam eaque blanditiis est. Quidem ratione commodi libero quo eaque placeat provident unde blanditiis id?</article>
-        <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia laudantium excepturi alias ut quisquam, repudiandae amet, ipsum quibusdam cumque porro est quas? Cupiditate doloribus id repellendus porro, exercitationem ea tenetur. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum magni dicta voluptate quo commodi sequi molestiae repellendus id, delectus, quaerat iusto, ad incidunt iure repellat modi. Vitae minima expedita nobis.</article>
-        <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis est unde magni necessitatibus harum asperiores tempora delectus eum neque facere? Fugiat nam incidunt dolorem earum rem est temporibus dolores eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam dicta repellendus suscipit, sequi laborum repudiandae consectetur culpa facere. Provident aspernatur consectetur vel laudantium, tempore sint? Molestiae non voluptas animi nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas voluptatibus ab consequatur! Praesentium quod ullam consequatur eum magni odit laborum expedita! Ducimus porro ut minima, quisquam natus aut consectetur debitis.</article>
-        <aside id="aside2">Aside 2</aside>
+        <aside id="aside1">
+            <h2 class="aside">Aside 1</h2>
+        </aside>
+        <section id="conteneur">
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ipsam molestias et dolorum, neque hic quisquam eaque blanditiis est. Quidem ratione commodi libero quo eaque placeat provident unde blanditiis id?
+            </article>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia laudantium excepturi alias ut quisquam, repudiandae amet, ipsum quibusdam cumque porro est quas? Cupiditate doloribus id repellendus porro, exercitationem ea tenetur. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum magni dicta voluptate quo commodi sequi molestiae repellendus id, delectus, quaerat iusto, ad incidunt iure repellat modi. Vitae minima expedita nobis.
+            </article>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis est unde magni necessitatibus harum asperiores tempora delectus eum neque facere? Fugiat nam incidunt dolorem earum rem est temporibus dolores eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam dicta repellendus suscipit, sequi laborum repudiandae consectetur culpa facere. Provident aspernatur consectetur vel laudantium, tempore sint? Molestiae non voluptas animi nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas voluptatibus ab consequatur! Praesentium quod ullam consequatur eum magni odit laborum expedita! Ducimus porro ut minima, quisquam natus aut consectetur debitis.
+            </article>
+        </section>
+        <aside id="aside2">
+            <h2 class="aside">Aside 2</h2>
+        </aside>
     </section>
-    <footer>FOOTER</footer>
+    <footer>
+        <h2>FOOTER</h2>
+    </footer>
 </body>
 </html>
