--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Exercice FLEX</title>
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <section>
-        <aside id="aside1">
+        <aside id="aside" class="asideYellow">
             <h2 class="aside">Aside 1</h2>
         </aside>
         <section id="conteneur">
@@ -36,7 +36,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis est unde magni necessitatibus harum asperiores tempora delectus eum neque facere? Fugiat nam incidunt dolorem earum rem est temporibus dolores eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam dicta repellendus suscipit, sequi laborum repudiandae consectetur culpa facere. Provident aspernatur consectetur vel laudantium, tempore sint? Molestiae non voluptas animi nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas voluptatibus ab consequatur! Praesentium quod ullam consequatur eum magni odit laborum expedita! Ducimus porro ut minima, quisquam natus aut consectetur debitis.
             </article>
         </section>
-        <aside id="aside2">
+        <aside id="aside" class="asidePink">
             <h2 class="aside">Aside 2</h2>
         </aside>
     </section>
